# ResumeChat-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
chatbot/: api.py  helper.py  main.py  streamer.py  utils.py
chatbot/backend/: api.py  llm_utils.py  streamer.py
chatbot/backend/config/: llms.py  prompts.py
chatbot/backend/docs/: retriever.py  uploader.py  utils.py  vectorizer.py
chatbot/backend/docs/pdfs/: README.md
docs/: retriever.py  utils.py  vectorizer.py
extension/: background.js  manifest.json
extension/scripts/: linkedin.js  popup.js
extension/styles/: linkedin.css  options.css  popup.css
extension/ui/: options.html  popup.html
